--- a/components.json
+++ b/components.json
@@ -5,11 +5,12 @@
     "tailwind": {
       "config": "tailwind.config.js",
       "css": "./src/styles/globals.css",
-      "baseColor": "indigo",
+      "baseColor": "slate",
       "cssVariables": true
     },
     "aliases": {
-      "components": "@/components-common/ui",
-      "utils": "@/lib-common/utils"
+      "components": "@/components-common",
+      "utils": "@/lib-client/utils"
     }
+    
   }
